@@ -1,4 +1,4 @@
-#==============================================================
+=#==============================================================
 #
 #  Name: RELEASE_NOTES
 #
@@ -8,6 +8,11 @@
 #  Auth: xx-Dec-2012, XXX         (xxx)
 #  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
 #--------------------------------------------------------------
+central_node_engine-R1-4-0:
+  * Compatible with mps_database-R1-1-0, which has a change in the
+    crates.number to crates.crate_id. This required code changes
+    in this library.
+
 central_node_engine-R1-3-3:
   * Implemented bypass for fast digital devices (they must have
     a single device input). The firmware configuration is reloaded
